[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-koino"
version = "0.1.0"
description = "Serveur MCP pour récupérer les missions publiées sur Koino.fr"
readme = "README.md"
authors = [
    {name = "Franck", email = "franck@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4", 
    "python-dateutil",
    "mcp[cli]",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/koino"
"Bug Tracker" = "https://github.com/yourusername/koino/issues"
